test_files/fails/s_nonstable_function_in_delay.ar
let rec foo = \f ->
    delay (f (adv (wait second)) :: foo f);

console <- () :: foo (\x -> x);
